@@ -1,5 +1,5 @@
 
-R Under development (unstable) (2019-05-20 r76550) -- "Unsuffered Consequences"
+R Under development (unstable) (2019-05-21 r76564) -- "Unsuffered Consequences"
 Copyright (C) 2019 The R Foundation for Statistical Computing
 Platform: x86_64-pc-linux-gnu (64-bit)
 
@@ -6394,7 +6394,15 @@ attr(,"note")
 attr(,"yada")
 function () 
 "not the same"
-> ## auto-printing and printing differed up to R 2.9.x
+> print.function <- function(x, ...) {
++     cat("my print(<function>): "); str(x, give.attr=FALSE); invisible(x) }
+> print.function
+my print(<function>): function (x, ...)  
+> print(print.function)
+my print(<function>): function (x, ...)  
+> rm(print.function)
+> ## auto-printing and printing differed up to R 2.9.x -- and then *AGAIN* in R 3.6.0
+> 
 > 
 > ## Make sure deparsing does not reset parameters
 > print(list(f, expression(foo), f, quote(foo), f, base::list, f),
